--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id='blur'>
             <header>
                 <div class="intro">
-                    <h1>Jimmy's Diner</h1>
+                    <h1>Matt's Diner</h1>
                     <p>The best burgers and pizzas in town.</p>
                 </div>
             </header>
